--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -2,7 +2,7 @@
 {
     background-color: black;
     color: white;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
