--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,16 +32,11 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.container {
+  max-width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
-  border: 0;
-}
-
-.container {
-  min-height: 100vh;
-  height: 100vh;
 }
 
 .main {
@@ -51,6 +46,9 @@ a {
   align-content: space-around;
   align-items: center;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
+  max-width: 100vw;
 }
 
 .frame
@@ -60,7 +58,6 @@ a {
   align-items: center;
   justify-content: space-evenly;
   min-height: 100vh;
-  min-width: 100vw;
   margin: 0;
 }
 
