added favicons to footer and made them link

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -9,3 +9,16 @@
     align-items: center;
     height: 15vh;
 }
+
+.row
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.row > *
+{
+    padding-left: 1vmin;
+    padding-right: 1vmin;
+}
