--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    max-width: 100%;
 }
 
 ul {
@@ -60,7 +61,8 @@ a {
   align-items: center;
   align-content: center;
   justify-content: space-evenly;
-  min-height: 85vh;
+  min-height: 100vh;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
