--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,15 +1,23 @@
 .body
 {
-    font-align: left;
     border: 1px double;
     padding: 3.6%;
-    max-width: 85%;
 }
 
-.body > *
+.header {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+.row
 {
-    width: 85%;
-    border-bottom: 1px solid;
+    padding: 10vw 0vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 85%;
 }
 
 .break {
