--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,15 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, monospace;
     max-width: 100%;
   width: 100%;
   height: 100%;
   max-height: 100%;
+}
+
+p {
+  text-align: left;
 }
 
 ul {
@@ -70,12 +73,24 @@ a {
   margin: 0;
 }
 
+.frame-v
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: space-evenly;
+  min-height: 100vh;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 .button
 {
   font-size: 1.8vh;
   font-style: underline;
 }
-
 
 .raulDukeLink:hover
 {
