--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -2,4 +2,30 @@
     position: absolute;
     left: 2vw;
     top: 0.4vh;
+    z-index: 1;
+    opacity: 1;
+}
+
+.imageContainer
+{
+    width: 22.8vw;
+}
+
+ul.buttons {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    background-color: white;
+}
+
+ul.buttons > li {
+    border: 1px solid black;
+    opacity: 0.8;
+    padding: 5vmin;
+    margin: 0.8vh;
+    text-align: center;
+    max-width: 50vw;
 }
