--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,6 @@ body {
   font-family: -apple-system, monospace;
     max-width: 100%;
   width: 100%;
-  height: 100%;
-  max-height: 100%;
 }
 
 p {
@@ -15,7 +13,6 @@ p {
 
 ul {
   list-style: none;
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 0;
@@ -23,12 +20,9 @@ ul {
 }
 
 li {
-  border: 1px solid black;
-  opacity: 0.8;
-  padding: 5vmin;
+  opacity: 0.91;
+  padding: 2.5vmin;
   margin: 0.8vh;
-  text-align: center;
-  max-width: 50vw;
 }
 
 .italic
@@ -66,7 +60,7 @@ a {
   flex-direction: row;
   align-items: center;
   align-content: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   min-height: 100vh;
   height: 100%;
   padding: 0;
@@ -92,6 +86,13 @@ a {
   font-style: italic;
 }
 
+.raulDukeLink
+{
+  font-stretch: expanded;
+  text-align: justify;
+  font-size: 4.2vmin;
+}
+
 .raulDukeLink:hover
 {
   border-bottom: 3px solid black;
@@ -99,10 +100,11 @@ a {
 
 .emoji
 {
-  position: relative;
+  position: absolute;
   width: 10vw;
-  bottom: 40vh;
-  left: 32vw;
+  bottom: 20vh;
+  left: 78vw;
+  z-index: 20;
 }
 
 .ital {
