--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -3,7 +3,7 @@
     left: 2vw;
     top: 0.4vh;
     z-index: 1;
-    opacity: 0.4;
+    opacity: 0.7;
 }
 
 .imageContainer
@@ -18,6 +18,7 @@ ul.buttons {
     justify-content: space-between;
     padding: 0;
     margin: 0;
+    width: 19%;
     background-color: white;
 }
 
