--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -3,7 +3,7 @@
     left: 2vw;
     top: 0.4vh;
     z-index: 1;
-    opacity: 0.7;
+    opacity: 0.6;
 }
 
 .imageContainer
@@ -18,7 +18,7 @@ ul.buttons {
     justify-content: space-between;
     padding: 0;
     margin: 0;
-    width: 19%;
+    min-width: 33%;
     background-color: white;
 }
 
