--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,10 +14,7 @@ p {
 ul {
   flex-direction: column;
   justify-content: space-between;
-  padding: 5%;
-
-  width: 33%;
-  padding: 2px;
+  min-width: 33%;
 }
 
 li {
@@ -25,7 +22,7 @@ li {
   padding: 2.5vmin;
   margin: 0.8vh;
   padding: 0 0;
-  margin: 0 2%;
+  margin: 0 0;
 }
 
 li.under {
@@ -71,7 +68,7 @@ a {
   flex-direction: row;
   align-items: center;
   align-content: center;
-  justify-content: center;
+  justify-content: space-evenly;
   min-height: 100vh;
   height: 100%;
   padding: 0;
@@ -80,7 +77,7 @@ a {
 
 .frame > *
 {
-  padding: 3%;
+  flex-shrink: 1;
 }
 
 .frame-v
