--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,18 +11,29 @@ p {
   text-align: left;
 }
 
+.frame > *
+{
+  padding: 0 3%;
+}
+
+
 ul {
+  list-style-position: inside;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 33%;
+  padding: 2%;
+  padding-left: 5%;
+  font-size: 1em;
+  width: 33%;
+  padding-left: 0;
 }
 
 li {
   opacity: 0.91;
-  padding: 2.5vmin;
+  padding: 0 2.5vmin;
   margin: 0.8vh;
   padding: 0 0;
-  margin: 0 0;
+  margin: 0 0%;
 }
 
 li.under {
@@ -73,11 +84,6 @@ a {
   height: 100%;
   padding: 0;
   margin: 0;
-}
-
-.frame > *
-{
-  flex-shrink: 1;
 }
 
 .frame-v
