--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -2,13 +2,18 @@
     position: absolute;
     left: 2vw;
     top: 0.4vh;
-    z-index: 1;
+    z-index: -10;
     opacity: 0.6;
 }
 
 .imageContainer
 {
     width: 22.8vw;
+}
+
+.firstC
+{
+    width: 22%;
 }
 
 ul.buttons {
@@ -33,6 +38,6 @@ ul.buttons > li {
 
 .links
 {
-    max-width: 22vw;
+    width: 22vw;
     padding: 0;
 }
