--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -45,3 +45,10 @@ ul.list > li
     text-align: center;
     max-width: 50vw;
 }
+
+.spinningGlobe
+{
+    position: absolute;
+    left: 75vw;
+    top: 15vh;
+}
