--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -9,6 +9,8 @@
     justify-content: center;
     align-items: center;
     height: 15vh;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
+    "Courier New", monospace;
 }
 
 .row
