--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,131 +2,61 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, monospace;
-    max-width: 100%;
+  font-family: "Mr Dafoe", cursive;
+  max-width: 100vw;
   width: 100%;
 }
 
-p {
-  text-align: left;
-}
-
-ul {
-  list-style-position: inside;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 2%;
-  padding-left: 5%;
-  font-size: 0.9em;
-  width: 33%;
-  padding-left: 0;
-}
-
-li {
-  opacity: 0.91;
-  padding: 0 2.5vmin;
-  margin: 0.8vh;
-  padding: 0 0;
-  margin: 0 0%;
-}
-
-li.under {
-  text-decoration: underline;
-}
-
-ul.under {
-  text-decoration: underline;
-}
-
-.italic
-{
-  font-style: italic;
-}
-
-a {
-  color: inherit;
+a{
+  color: black;
   text-decoration: none;
 }
 
-.container {
-  max-width: 100vw;
+a:visited {
+  background-color: red;
+}
+
+ul
+{
+  font-family: SFMono-Regular, Menlo, Monaco,
+  Consolas, "Liberation Mono",
+  "Courier New", monospace;
+  list-style-type: '>';
+  padding: 0;
+}
+
+ul > li{
+  padding: 1em;
+  border-bottom: 1px solid whitesmoke;
+  padding-left: 1em;
+  padding-bottom: 0.8em;
+  text-align: left;
+}
+
+ul > li:hover{
+  padding-left: 0.5em;
+  padding-bottom: 0.8em;
+  border-bottom: 1px solid black;
+}
+
+.container
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  margin: 0;
-  padding: 0;
 }
 
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-content: space-around;
-  align-items: center;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  max-width: 100vw;
-}
-
-.frame
-{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  align-content: center;
-  justify-content: space-evenly;
-  min-height: 100vh;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-.frame > *
-{
-  width: 22%;
-}
-
-h2
-{
+.news {
   text-align: center;
 }
 
-.frame-v
+.news > p
 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: space-around;
-  justify-content: space-evenly;
-  min-height: 100vh;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-.button
-{
-  font-size: 1.8vh;
-  font-style: italic;
-}
-
-.raulDukeLink
-{
-  font-stretch: expanded;
-  text-align: center;
-  font-size: 4.2vmin;
-}
-
-
-.emoji
-{
-  position: absolute;
-  width: 10vw;
-  bottom: 20vh;
-  left: 78vw;
-  z-index: 20;
-}
-
-.ital {
-  font-style: italic;
-  font-size: smaller;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
+  "Courier New", monospace;
+  color:black;
+  font-variant: small-caps;
+  font-size: .8rem;
 }
