--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'Office';
-  src: url('/Eastwood.woff2') format('woff2'),
-  url('/Eastwood.woff') format('woff');
-}
 
 html,
 body {
@@ -16,7 +11,7 @@ body {
 
 a{
   color: black;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:visited {
