--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,43 +3,22 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Office", SFMono-Regular, Menlo, Monaco,
-  Consolas, "Liberation Mono", "Courier New", monospace;
   max-width: 100vw;
   width: 100%;
 }
+video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  opacity: 0.9;
+}
 
-a{
+.news > a {
   color: black;
-  text-decoration: underline;
-}
-
-a:visited {
-  background-color: red;
-}
-
-ul
-{
-  font-family: SFMono-Regular, Menlo, Monaco,
-  Consolas, "Liberation Mono",
-  "Courier New", monospace;
-  list-style-type: '★';
-  padding: 0;
-  text-align: center;
-  margin-top: 5vh;
-}
-
-ul > li{
-  padding: 1em;
-  border-bottom: 1px solid whitesmoke;
-  padding-bottom: 0.8em;
-  text-align: left;
-  font-style: bold;
-  text-align: center;
-}
-
-ul > li:hover{
-  border-bottom: 1px solid black;
+  text-decoration:underline;
+  font-size: 1.2em;
 }
 
 .container
@@ -53,19 +32,14 @@ ul > li:hover{
 
 .news {
   text-align: center;
+  font-size: 1em;
 }
 
-.news > p
+.box
 {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
-  "Courier New", monospace;
-  color:black;
-  font-variant: small-caps;
-  font-size: .8rem;
-  background: black;
-}
-
-.news > p:hover
-{
-  background: white;
+  background-color: whitesmoke;
+  padding: 0.8vw;
+  font-size: 5vw;
+  font: -apple-system, system-ui, sans-serif;
+  opacity: 0.8;
 }
