--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,14 +5,18 @@ body {
   margin: 0;
   max-width: 100vw;
   width: 100%;
+  background-color: black;
 }
+
 video {
   object-fit: cover;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;
-  opacity: 1;
+  z-index: 0;
+  opacity: 0.8;
   background-color: black;
 }
 
@@ -38,11 +42,11 @@ video {
 
 .box
 {
-  background-color: rgba(0, 0, 0, 0.4);
   padding: 0.1vh 2vw;
   font-size: 3.5vw;
   font: -apple-system, system-ui, sans-serif;
   color: whitesmoke;
+  z-index: 1;
 }
 
 .box > *
