--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,28 +1,35 @@
 .footer
 {
     background-color: black;
-    padding: 2.4vh 2.2vw;
     color: white;
     max-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 15vh;
+    height: 4vh;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
     "Courier New", monospace;
 }
 
-.row
+.rowText
 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding: 0 0;
+    width: 50%;
 }
 
-.row > *
+.rowList
 {
-    padding-top: 1vh;
-    padding-left: 2.2vmin;
-    padding-right: 2.2vmin;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 38%;
+}
+
+.footerText
+{
+    text-align: center;
 }
