--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,7 @@
 .footer
 {
     background-color: black;
+    padding: 3.6vh 0 1.8vh 0;
     color: white;
     max-width: 100vw;
     display: flex;
