--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,7 +1,7 @@
 .footer
 {
     background-color: black;
-    padding: 2.8vh 0 1.8vh 0;
+    padding: 1.6vh 0 1.6vh 0;
     color: white;
     max-width: 100vw;
     display: flex;
@@ -26,11 +26,13 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    width: 38%;
+    justify-content: center;
+    width: 50%;
 }
 
 .footerText
 {
     text-align: center;
+    margin: 0;
+    color: whitesmoke;
 }
