--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -17,9 +17,9 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 0 0;
-    width: 50%;
+    width: 100%;
 }
 
 .rowList
