--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,8 +13,12 @@ a {
   font-style: normal;
   font-variant: small-caps;
   text-decoration: none;
+  display: inline-block;
 }
 
 a:hover {
-  transform: scale(1, -1);
+  -moz-transform: scale(1, -1);
+  -webkit-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
 }
