--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
 }
 
 a {
-  color: whitesmoke;
+  color: black;
   font-style: normal;
   font-variant: small-caps;
   text-decoration: none;
