--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,17 +1,24 @@
 .footer
 {
     background-color: black;
-    padding: 1.6vh 0 1.6vh 0;
+    padding: 2vh 0 2vh 0;
     color: white;
-    max-width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 4vh;
+    width: 100vw;
+    height: 5vh;
     margin: 0;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
     "Courier New", monospace;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.column 
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .rowText
@@ -19,16 +26,25 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 0 0;
-    width: 100%;
 }
 
 .rowList
 {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 50%;
+    justify-content: space-between;
+}
+
+.divider
+{
+    width: 0.75vw;
+}
+
+.rowList > * 
+{
+    font-size: large;
+    padding: 0;
+    margin: 0;
 }
 
 .footerText
@@ -36,5 +52,5 @@
     text-align: center;
     margin: 0;
     color: whitesmoke;
-    font-size: 2vw;
+    font-size: .5rem;
 }
