--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,8 @@ body {
 }
 
 a {
-  color: black;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
   font-style: normal;
   font-variant: small-caps;
   text-decoration: none;
