--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,12 +10,16 @@ body {
 
 a {
   text-align: center;
+  font-size: 5em;
+  text-overflow: wrap;
+  font-kerning: normal;
   color: white;
   text-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
   font-style: normal;
   font-variant: small-caps;
   text-decoration: none;
   display: inline-block;
+  margin: 0;
 }
 
 a:hover {
