--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -32,12 +32,12 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .divider
 {
-    width: 0.75vw;
+    width: 1vw;
 }
 
 .rowList > * 
