--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,7 +3,7 @@
     background-color: black;
     padding: 2vh 0 2vh 0;
     color: white;
-    width: 100vw;
+    max-width: 100%;
     height: 5vh;
     margin: 0;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
