--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,4 +26,7 @@ a:hover {
   -webkit-transform: scale(1, -1);
   -o-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
+  background-color: white;
+  color: black;
+  padding: 0;
 }
