--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -19,6 +19,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    width: 40vw;
 }
 
 .rowText
@@ -26,13 +27,16 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
+
 }
 
 .rowList
 {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .divider
