--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,8 +1,7 @@
 .footer
 {
-    background-color: black;
-    padding: 2vh 0 2vh 0;
-    color: white;
+    padding: 1.2vh 0 1.2vh 0;
+    color: #FFFB21;
     max-width: 100%;
     height: 5vh;
     margin: 0;
@@ -59,6 +58,5 @@
 {
     text-align: center;
     margin: 0;
-    color: whitesmoke;
-    font-size: .5rem;
+    font-size: .6rem;
 }
