--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ body {
 p {
   margin: 0;
   color: #FFFB21;
-  padding: 3.5vmin;
+  padding: 5.5vmin;
   text-align: center;
 }
 
@@ -46,5 +46,6 @@ a:hover {
 {
   a {
     line-height: 12vmax;
+    height: 8vh;
   }
 }
