--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,5 +1,14 @@
 .root
 {
     max-width: 100vw;
+}
+
+.column
+{
+    padding: 1vmin 1vmin 0 1vmin;
     overflow: hidden;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
 }
