--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
   max-height: 100vh;
   overflow: hidden;
   max-width: 100%;
-  background-color: #011688;
+  background-color: #0B30FE;
   font-family: 'Sunset-Serial';
   font-weight: bold;
   font-style: normal;
@@ -23,7 +23,8 @@ p {
 
 h6 {
   text-align: center;
-  color: #FFFB21;
+  font-size: 0.8em;
+  color: white;
   padding: 2vmin 1vmin 0 1vmin;
   margin: 0;
 }
