--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -5,10 +5,20 @@
 
 .column
 {
-    padding: 1vmin 1vmin 0 1vmin;
     overflow: hidden;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    margin: auto;
+    width: 25vw;
+    max-height: 100vh;
+}
+
+
+@media only screen and (max-width: 768px) 
+{
+  .column {
+    width: 100vw;
+  }
 }
