--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,8 @@ a:hover {
   -webkit-transform: scale(1, -1);
   -o-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
+  position: relative;
+  top: 5vh;
 
 }
 
