--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   max-height: 100vh;  
   max-width: 100%;
-  background-color: #0B30FE;
+  background-color: #011688;
   font-family: 'Sunset-Serial';
   font-weight: bold;
   font-style: normal;
@@ -33,10 +33,11 @@ a {
 }
 
 .main {
-  padding-top: 1.45vmin;
+  padding: 3.75vmin 5.45vmin 5.45vmin 5.45vmin;
   text-align: center;
   font-size: 10vmin;
   text-overflow: wrap;
+  line-height: 40%;
   font-kerning: normal;
   color: #FFFB21;
   /* text-shadow: rgba(0, 0, 0, 0.03) 0px 4px 12px; */
@@ -54,7 +55,7 @@ a:hover {
   -o-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
   position: relative;
-  top: 5vh;
+  top: 0vh;
 
 }
 
