--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ body {
   max-height: 100vh;  
   max-width: 100%;
   background-color: #011688;
+  -webkit-text-stroke-width: 0.2px;
+  -webkit-text-stroke-color: black;
   font-family: 'Sunset-Serial';
   font-weight: bold;
   font-style: normal;
@@ -26,6 +28,8 @@ h6 {
   color: white;
   padding: 2vmin 1vmin 0 1vmin;
   margin: 0;
+  -webkit-text-stroke-width: 0px;
+  -webkit-text-stroke-color: black;
 }
 
 a {
@@ -33,6 +37,7 @@ a {
 }
 
 .main {
+
   padding: 3.75vmin 5.45vmin 5.45vmin 5.45vmin;
   text-align: center;
   font-size: 10vmin;
@@ -45,8 +50,9 @@ a {
   font-variant: small-caps;
   display: inline-block;
   text-decoration: underline;
-  text-decoration-thickness: 4%;
+  text-decoration-thickness: 8%;
   text-underline-offset: 8%;
+  text-decoration-color: #FFFB21;
 }
 
 a:hover {
