--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@ a {
 
 .main {
 
-  padding: 3.75vmin 5.45vmin 5.45vmin 5.45vmin;
+  padding: 3.75vmin 0 4vmin 0;
   text-align: center;
   font-size: 10vmin;
   text-overflow: wrap;
