--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ body {
 
 p {
   margin: 0;
-  padding: 0.25vmin 0 1.75vmin 0;
+  padding: 0.25vmin 0 0vmin 0;
   color: #EFEFEF;
   text-align: center;
 }
@@ -34,6 +34,30 @@ h6 {
 
 a {
   color: #EFEFEF;
+}
+
+.label > h3{
+  margin: 0;
+}
+
+.label
+{
+  margin: 3vmax;
+  text-align: center;
+  color: #EFEFEF;
+  transform: rotate(90deg);
+}
+
+.desc
+{
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
+  "Courier New", monospace;
+  padding: 6px 0;
+  margin: 0;
+  text-align: left;
+  font-size: 1.2vmin;
+  max-width: 30vw;
+  display:inline-block;
 }
 
 .main {
@@ -65,3 +89,12 @@ a {
 
 }
 
+@media only screen and (max-width: 768px) 
+{
+  .column {
+    width: 75vw;
+  }
+  .main{
+    padding: 5vmin 0 7vmin 0;
+  }
+}
