--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,10 @@ a {
 
 .label:hover
 {
-  transform: rotate(0deg);
+  -moz-transform: scale(1, -1);
+  -webkit-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
 }
 
 .desc
