--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
   max-height: 100vh;  
   max-width: 100%;
   background-color: #011688;
+  color: #EFEFEF;
   -webkit-text-stroke-width: 0.2px;
   -webkit-text-stroke-color: black;
   font-family: 'Sunset-Serial';
@@ -25,15 +26,14 @@ p {
 h6 {
   text-align: center;
   font-size: 0.8em;
-  color: white;
-  padding: 2vmin 1vmin 0 1vmin;
+  padding: 1vmin;
   margin: 0;
   -webkit-text-stroke-width: 0px;
   -webkit-text-stroke-color: black;
 }
 
 a {
-  color: #EFEFEF;
+  color: #FFFB21;
 }
 
 .label > h3{
@@ -64,9 +64,14 @@ a {
   display:inline-block;
 }
 
+.header 
+{
+  padding: 2vmin;
+}
+
 .main {
   letter-spacing: 5px;
-  padding: 3vmin 0 7vmin 0;
+  padding: 3vmin 0 6vmin 0;
   text-align: center;
   font-size: 10vmin;
   text-overflow: wrap;
@@ -76,11 +81,20 @@ a {
   /* text-shadow: rgba(0, 0, 0, 0.03) 0px 4px 12px; */
   font-style: normal;
   font-variant: small-caps;
-  display: inline-block;
   text-decoration: underline;
   text-decoration-thickness: 8%;
   text-underline-offset: 8%;
   text-decoration-color: #FFFB21;
+}
+
+.sub 
+{
+  padding: 0;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
+  "Courier New", monospace;
+  max-width: 100%;
+  font-size: 0.78em;
+  margin: auto;
 }
 
 .main:hover {
@@ -89,8 +103,15 @@ a {
   -o-transform: scale(1, -1);
   -ms-transform: scale(1, -1);
   position: relative;
-  top: -2vh;
+  top: 0vh;
+}
 
+.flip:hover{
+  -moz-transform: scale(1, -1);
+  -webkit-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
+  display: inline-block;
 }
 
 @media only screen and (max-width: 768px) 
@@ -99,6 +120,10 @@ a {
     width: 75vw;
   }
   .main{
-    padding: 5vmin 0 12vmin 0;
+    padding: 2.5vmin 0 7vmin 0;
+  }
+
+  .sub{
+    font-size: 0.5em;
   }
 }
