--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ p {
 h6 {
   text-align: center;
   font-size: 0.8em;
-  padding: 1vmin;
+  padding:  0 0 2vmin 0;
   margin: 0;
   -webkit-text-stroke-width: 0px;
   -webkit-text-stroke-color: black;
@@ -42,7 +42,7 @@ a {
 
 .header 
 {
-  padding: 2vmin;
+  padding: 2vmin 0 3vmin 0;
 }
 
 .main {
@@ -72,6 +72,9 @@ a {
   max-width: 100%;
   font-size: 0.78em;
   margin: auto;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .main:hover {
@@ -82,6 +85,7 @@ a {
   position: relative;
   top: 0vh;
 }
+
 
 .flip:hover{
   -moz-transform: scale(1, -1);
@@ -99,8 +103,8 @@ a {
   .main{
     padding: 2.5vmin 0 7vmin 0;
   }
-
   .sub{
-    font-size: 0.5em;
+    position: relative;
+    display: none;
   }
 }
