--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,12 @@ a {
 
 .header 
 {
-  padding: 2vmin 0 3vmin 0;
+  padding: 1vmin;
+}
+
+.header > *
+{
+  padding: 1vmin 0 1vmin 0;
 }
 
 .main {
