--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,7 +76,7 @@ a {
 
 .main {
   letter-spacing: 5px;
-  padding: 1.75vmin 0 3vmin 0;
+  padding: 1.75vmin 0 1vmin 0;
   text-align: center;
   font-size: 10vmin;
   text-overflow: wrap;
@@ -85,12 +85,9 @@ a {
   color: #FFFB21;
   /* text-shadow: rgba(0, 0, 0, 0.03) 0px 4px 12px; */
   font-style: normal;
+  text-decoration: none;
   font-variant: small-caps;
   display: inline-block;
-  text-decoration: underline;
-  text-decoration-thickness: 8%;
-  text-underline-offset: 8%;
-  text-decoration-color: #FFFB21;
 }
 
 .sub
