--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@ h6 {
   text-align: center;
   font-size: 0.8em;
   color: white;
-  padding: 2vmin 1vmin 0 1vmin;
+  padding: 2vmin 0vmin 2vmin 1vmin;
   margin: 0;
   -webkit-text-stroke-width: 0px;
   -webkit-text-stroke-color: black;
@@ -79,18 +79,18 @@ a {
 
 .header 
 {
-  padding: 1vmin;
+  padding: 0vmin;
 }
 
 .header > *
 {
-  padding: 1vmin 0 1vmin 0;
+  padding: 2vmin 0 2  vmin 0;
 }
 
 .main {
   font-family: 'Sunset-Serial';
   letter-spacing: 5px;
-  padding: 0.5vmin 0 1vmin 0;
+  padding: 1vmin 0 4vmin 0;
   text-align: center;
   font-size: 10vmin;
   text-overflow: wrap;
@@ -104,6 +104,16 @@ a {
   display: inline-block;
 }
 
+.main:hover {
+  -moz-transform: scale(1, -1);
+  -webkit-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
+  position: relative;
+  top: -1vh;
+}
+
+
 .sub
 {
   padding: 0;
@@ -115,15 +125,6 @@ a {
   position: absolute;
   top: 10px;
   left: 10px;
-}
-
-.main:hover {
-  -moz-transform: scale(1, -1);
-  -webkit-transform: scale(1, -1);
-  -o-transform: scale(1, -1);
-  -ms-transform: scale(1, -1);
-  position: relative;
-  top: 0.5vh;
 }
 
 .flip:hover{
