--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 html, body {
   height: 100%;
   min-height: 100%;
-  background: #0a0a0a; /* Clean dark background, change if you prefer light */
-  color: #fff;
+  background: #F4FFFD; /* Clean dark background, change if you prefer light */
+  color: #21221B;
   font-family: 'Inter', system-ui, sans-serif;
 }
