--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,19 @@ html, body {
   color: #21221B;
   font-family: 'Inter', system-ui, sans-serif;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
